Создано с помощью Colaboratory

--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPUYmpXQ0+6sba8qayN30Qb",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +17,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AlexanderKuznetsov03/DataScince/blob/main/Practice.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "LLnIU6Nzz_CY"
       },
@@ -47,7 +59,7 @@
         },
         "outputId": "4ada73fe-7043-4c97-cf8f-819412bc4df5"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +390,7 @@
         "id": "FE1-0bu5M2qE",
         "outputId": "0a8d8beb-5733-4468-e075-2bbe96f95051"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -404,7 +416,7 @@
         "id": "HFL2R9WO4OEC",
         "outputId": "97bf6087-0756-4004-8709-30ef9cc80b49"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -737,7 +749,7 @@
         "id": "PovvZlYvID90",
         "outputId": "4d237d76-dcdb-4b56-861c-83416afc5d7c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1063,7 +1075,7 @@
       "metadata": {
         "id": "8AZAht7o4c1C"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1079,7 +1091,7 @@
         "id": "Y14mW_PDkq_U",
         "outputId": "ffbffeca-4fc0-4b82-8d83-5c1b57ab6a9d"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1232,7 +1244,7 @@
         "id": "todn05P9BGZU",
         "outputId": "98a3dfba-726c-4f97-a035-cebdb3e1fdae"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1267,7 +1279,7 @@
         "id": "XigFwO7CCmj9",
         "outputId": "90dbc07c-2d10-499f-bc63-b591f92058bb"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1301,7 +1313,7 @@
         "id": "BtAa8C_ZEFAW",
         "outputId": "0682cc7d-4bd8-4be0-a578-86960cb4b1cf"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1331,7 +1343,7 @@
         "id": "Jya3V_0zwtik",
         "outputId": "eee76b82-2882-4b49-c8ab-1b03d48f9d26"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1620,7 +1632,7 @@
         },
         "outputId": "67315836-528b-417e-82b7-d19f9a151b62"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1940,7 +1952,7 @@
         "id": "A5Jzc6Ld8lqE",
         "outputId": "53e61fce-8d9c-40e2-8309-ee28a8492be5"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1970,7 +1982,7 @@
         "id": "Pg7meBuK8zxW",
         "outputId": "60a0a3c4-4ec3-40c7-a464-54592e5ee824"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2006,7 +2018,7 @@
         "id": "m1V-N7uM9ufx",
         "outputId": "67cdc327-438f-45c9-9aaf-2e6b40386a9e"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2019,15 +2031,67 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "tnxuvPdsdkeg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "\n"
+        "import statsmodels.api as sm\n",
+        "\n",
+        "X_train = sm.add_constant(x_train)\n",
+        "model_4 = sm.OLS(y_train, X_train).fit()\n",
+        "print(model_4.summary())\n"
       ],
       "metadata": {
-        "id": "nrv7lOefTf-K"
+        "id": "nrv7lOefTf-K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2626d07e-bd57-4165-86c0-562cd354d25b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:                 Weight   R-squared:                       0.892\n",
+            "Model:                            OLS   Adj. R-squared:                  0.879\n",
+            "Method:                 Least Squares   F-statistic:                     67.34\n",
+            "Date:                Mon, 25 Sep 2023   Prob (F-statistic):           5.87e-22\n",
+            "Time:                        17:50:09   Log-Likelihood:                -356.42\n",
+            "No. Observations:                  56   AIC:                             726.8\n",
+            "Df Residuals:                      49   BIC:                             741.0\n",
+            "Df Model:                           6                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "==============================================================================\n",
+            "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------\n",
+            "const       -549.3536    132.008     -4.162      0.000    -814.634    -284.073\n",
+            "Species        0.2324     16.568      0.014      0.989     -33.063      33.528\n",
+            "Length1       35.1841     98.623      0.357      0.723    -163.006     233.375\n",
+            "Length2        4.2079    108.365      0.039      0.969    -213.559     221.975\n",
+            "Length3       -5.8901     33.294     -0.177      0.860     -72.797      61.017\n",
+            "Height         3.7508      4.633      0.810      0.422      -5.560      13.061\n",
+            "Width          1.9280     11.129      0.173      0.863     -20.437      24.293\n",
+            "==============================================================================\n",
+            "Omnibus:                        4.135   Durbin-Watson:                   1.923\n",
+            "Prob(Omnibus):                  0.127   Jarque-Bera (JB):                3.681\n",
+            "Skew:                          -0.628   Prob(JB):                        0.159\n",
+            "Kurtosis:                       2.991   Cond. No.                         485.\n",
+            "==============================================================================\n",
+            "\n",
+            "Notes:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+          ]
+        }
+      ]
     }
   ]
 }
